fix: contrast issue in h4 headings

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -62,11 +62,7 @@ h4 {
 h5,
 h6 {
     font-family: var(--font-mono);
-    color: var(--primary-dark);
-
-    @include mixins.theme(dark) {
-        color: var(--primary-light);
-    }
+    color: var(--primary-light);
 }
 
 h5 {
